<resources>
    <string name="app_name">DepEat</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Sign in</string>
    <string name="error_dimension_pass">Password must be more than six character!</string>
    <string name="email_failed">Email Failed</string>
    <string name="show_password">Show Password</string>
    <string name="operation_success">success</string>
    <string name="operation_fail">failed</string>
    <string name="number_phone_registration">Numero di telefono</string>
    <string name="registrazione">Registrazione</string>
    <string name="login_menu">Login</string>
    <string name="checkout">Checkout</string>
    <string name="registration_success">Registration success</string>
    <string name="numberphone_error">Insert a valid number phone</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="my_account">My Account</string>
    <string name="menu">MENU</string>
    <string name="view_mode">View mode</string>
    <string name="payment">Payment</string>
    <string name="euro">€</string>
    <string name="total_price">Total:</string>
    <string name="min_order">Min Order:</string>
    <string name="order_summary">Order Summary</string>
    <string name="pay">PAY</string>
    <string name="profile">Profile</string>
    <string name="PROFILE_PREFERENCES">profile_preferences</string>
    <string name="TOKEN">token_pref</string>
</resources>
