<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_topbar"
        android:orientation="vertical">

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/registrazione"
            android:textColor="#FFFFFF" />

    </RelativeLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_email_registration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id_text_email_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_password_registration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable = "@drawable/show_password_selector"
        app:passwordToggleTint="@color/colorGrey"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id_text_password_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_numberphone_registration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id_text_numberphone_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/number_phone_registration" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/register_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/register"
            android:background="@drawable/button"
            android:textColor="@color/colorWhite"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>