<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_tv_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/order_summary"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/material_light_white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/id_name_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="La fraschetta"
            android:textSize="20sp"
            android:textColor="@color/material_light_white"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_indirizzo_restaurant"
            android:textSize="18sp"
            android:textColor="@color/material_light_white"
            android:fontFamily="sans-serif"
            tools:text = "La fraschetta"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <View
        android:layout_below="@id/linearLayoutCheckout"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutCheckout"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"/>

    <View
        android:id="@+id/view_separator2"
        android:layout_below="@id/recyclerview_id"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_button_pay"
        android:layout_below="@id/view_separator2">

        <TextView
            android:id="@+id/id_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/total_price"
            android:textColor="@color/material_light_white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/id_total_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/id_total"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/material_light_white"
            android:textSize="20sp"
            tools:text="0.00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/id_total_tv"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/euro"
            android:textColor="@color/material_light_white"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/view_button_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/baselinecheckout"

        >

        <Button
            android:id="@+id/button_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:enabled="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button"
            android:text="@string/pay" />
    </LinearLayout>


</RelativeLayout>