<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="56dp"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_info_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@drawable/image_login"
            android:id="@+id/img_restaurant_shop"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/blank_profile" />

        <View
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/material_light_black"
            android:alpha="0.7"/>



        <TextView
            android:id="@+id/name_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_above="@id/address_restaurant"
            android:fontFamily="sans-serif-medium"
            tools:text="Nome del Ristorante"
            android:textColor="@color/material_light_white"
            android:textSize="@dimen/material_typography_display1"
            />

        <TextView
            android:id="@+id/address_restaurant"
            android:layout_width="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/img_restaurant_shop"
            tools:text="via Sandro Sandri 81"
            android:textColor="@color/material_light_white"
            android:layout_marginBottom="4dp"
            android:textSize="@dimen/material_typography_caption"            android:fontFamily="sans-serif"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_place_black_24dp"
            android:layout_toEndOf="@+id/address_restaurant"
            android:layout_alignBottom="@id/img_restaurant_shop"
            />

    </RelativeLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rl_info_restaurant"
        android:background="@color/colorWhite" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_above="@id/rl_info_checkout">
    </android.support.v7.widget.RecyclerView>


    <RelativeLayout
        android:background="@drawable/baselinecheckout"
        android:id="@+id/rl_info_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <RelativeLayout
            android:id="@+id/rl_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:text="@string/total_price"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/id_total_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/text_total"
                android:text="0.00"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/id_total_number"
                android:text="@string/euro"
                android:textSize="16sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_minOrder"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_minOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:text="@string/min_order"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/minOrderNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/text_minOrder"
                tools:text="55.00"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/minOrderNumber"
                android:text="@string/euro"
                android:textSize="16sp" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/determinateBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:progressTint="@color/colorRedAccent"
            android:layout_below="@id/rl_total"
            android:progress="25" />

        <Button
            android:id="@+id/id_buttonCheckout"
            android:background="@drawable/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/determinateBar"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_margin="8dp"
            android:textSize="14sp"
            android:text="@string/checkout" />

    </RelativeLayout>


</RelativeLayout>